kind/resources/registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oci-registry
---
apiVersion: v1
kind: Pod
metadata:
  name: oci-registry
  namespace: oci-registry
  labels:
    app.kubernetes.io/name: oci-registry
spec:
  containers:
    - name: oci-registry
      image: registry:2
      ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: oci-registry
  namespace: oci-registry
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: oci-registry
  ports:
    - name: tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
    - name: udp
      protocol: UDP
      port: 5000
      targetPort: 5000
      nodePort: 30500
